Fix alignment of the blood potency section of the blood tab

--- a/display/wod5e-styling.css
+++ b/display/wod5e-styling.css
@@ -813,6 +813,7 @@ h3.item-name {
 }
 .actor.sheet.vampire .tab[data-tab="blood"] .blood-details,
 .actor.sheet.vampire .tab[data-tab="blood"] .blood-potency {
+  align-self: flex-start;
   margin-left: 10px;
   margin-right: 10px;
 }
